Here's the commented version of the code:

```c++
# Copyright 2016 gRPC authors.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.

import logging
import struct

import h2
import h2.connection
import messages_pb2
import twisted
import twisted.internet
import twisted.internet.protocol

# Constants for HTTP/2 protocol implementation
_READ_CHUNK_SIZE = 16384  # Default chunk size for reading data
_GRPC_HEADER_SIZE = 5  # Size of gRPC frame header (1 byte flag + 4 bytes length)
_MIN_SETTINGS_MAX_FRAME_SIZE = 16384  # Minimum allowed max frame size

class H2ProtocolBaseServer(twisted.internet.protocol.Protocol):
    """Base HTTP/2 protocol server implementation for gRPC using Twisted framework."""

    def __init__(self):
        """Initialize HTTP/2 connection and handler registry."""
        self._conn = h2.connection.H2Connection(client_side=False)  # Server-side H2 connection
        self._recv_buffer = {}  # Buffer for received data per stream
        self._handlers = {}  # Registry of event handlers
        # Default handlers for various HTTP/2 events
        self._handlers["ConnectionMade"] = self.on_connection_made_default
        self._handlers["DataReceived"] = self.on_data_received_default
        self._handlers["WindowUpdated"] = self.on_window_update_default
        self._handlers["RequestReceived"] = self.on_request_received_default
        self._handlers["SendDone"] = self.on_send_done_default
        self._handlers["ConnectionLost"] = self.on_connection_lost
        self._handlers["PingAcknowledged"] = self.on_ping_acknowledged_default
        self._stream_status = {}  # Tracks status of each stream (open/closed)
        self._send_remaining = {}  # Tracks remaining data to send per stream
        self._outstanding_pings = 0  # Count of unacknowledged pings

    def set_handlers(self, handlers):
        """Override default handlers with custom ones."""
        self._handlers = handlers

    def connectionMade(self):
        """Twisted callback when a new connection is established."""
        self._handlers["ConnectionMade"]()

    def connectionLost(self, reason):
        """Twisted callback when connection is lost."""
        self._handlers["ConnectionLost"](reason)

    def on_connection_made_default(self):
        """Default handler for new connection: initiates HTTP/2 connection."""
        logging.info("Connection Made")
        self._conn.initiate_connection()
        self.transport.setTcpNoDelay(True)  # Enable TCP_NODELAY
        self.transport.write(self._conn.data_to_send())  # Send initial settings

    def on_connection_lost(self, reason):
        """Default handler for connection termination."""
        logging.info("Disconnected %s" % reason)

    def dataReceived(self, data):
        """
        Twisted callback when data is received.
        Processes HTTP/2 frames and dispatches events to appropriate handlers.
        """
        try:
            events = self._conn.receive_data(data)  # Parse HTTP/2 frames
        except h2.exceptions.ProtocolError:
            return  # Silently ignore protocol errors
        
        # Send any pending data from connection
        if self._conn.data_to_send:
            self.transport.write(self._conn.data_to_send())
        
        # Process each HTTP/2 event
        for event in events:
            if isinstance(event, h2.events.RequestReceived) and self._handlers.has_key("RequestReceived"):
                logging.info("RequestReceived Event for stream: %d" % event.stream_id)
                self._handlers["RequestReceived"](event)
            elif isinstance(event, h2.events.DataReceived) and self._handlers.has_key("DataReceived"):
                logging.info("DataReceived Event for stream: %d" % event.stream_id)
                self._handlers["DataReceived"](event)
            elif isinstance(event, h2.events.WindowUpdated) and self._handlers.has_key("WindowUpdated"):
                logging.info("WindowUpdated Event for stream: %d" % event.stream_id)
                self._handlers["WindowUpdated"](event)
            elif isinstance(event, h2.events.PingAcknowledged) and self._handlers.has_key("PingAcknowledged"):
                logging.info("PingAcknowledged Event")
                self._handlers["PingAcknowledged"](event)
        
        # Send any additional data generated by event handlers
        self.transport.write(self._conn.data_to_send())

    def on_ping_acknowledged_default(self, event):
        """Default handler for ping acknowledgments."""
        logging.info("ping acknowledged")
        self._outstanding_pings -= 1

    def on_data_received_default(self, event):
        """Default handler for data frames: buffers data and acknowledges receipt."""
        self._conn.acknowledge_received_data(len(event.data), event.stream_id)
        self._recv_buffer[event.stream_id] += event.data

    def on_request_received_default(self, event):
        """Default handler for request headers: prepares response headers."""
        self._recv_buffer[event.stream_id] = ""  # Initialize receive buffer
        self._stream_id = event.stream_id  # Track current stream
        self._stream_status[event.stream_id] = True  # Mark stream as open
        
        # Send standard gRPC response headers
        self._conn.send_headers(
            stream_id=event.stream_id,
            headers=[
                (":status", "200"),
                ("content-type", "application/grpc"),
                ("grpc-encoding", "identity"),
                ("grpc-accept-encoding", "identity,deflate,gzip"),
            ],
        )
        self.transport.write(self._conn.data_to_send())

    def on_window_update_default(self, _, pad_length=None, read_chunk_size=_READ_CHUNK_SIZE):
        """
        Default handler for window updates: resumes sending data on streams
        that were blocked by flow control.
        """
        for stream_id in self._send_remaining:
            self.default_send(
                stream_id,
                pad_length=pad_length,
                read_chunk_size=read_chunk_size,
            )

    def send_reset_stream(self):
        """Reset the current stream."""
        self._conn.reset_stream(self._stream_id)
        self.transport.write(self._conn.data_to_send())

    def setup_send(self, data_to_send, stream_id, pad_length=None, read_chunk_size=_READ_CHUNK_SIZE):
        """
        Prepare data for sending on a stream.
        Args:
            data_to_send: The data to be sent
            stream_id: Target stream ID
            pad_length: Optional padding length
            read_chunk_size: Chunk size for sending
        """
        logging.info("Setting up data to send for stream_id: %d" % stream_id)
        self._send_remaining[stream_id] = len(data_to_send)
        self._send_offset = 0
        self._data_to_send = data_to_send
        self.default_send(
            stream_id, pad_length=pad_length, read_chunk_size=read_chunk_size
        )

    def default_send(self, stream_id, pad_length=None, read_chunk_size=_READ_CHUNK_SIZE):
        """
        Send data on a stream respecting flow control.
        Args:
            stream_id: Target stream ID
            pad_length: Optional padding length
            read_chunk_size: Maximum chunk size per frame
        """
        if not self._send_remaining.has_key(stream_id):
            return

        while self._send_remaining[stream_id] > 0:
            lfcw = self._conn.local_flow_control_window(stream_id)
            padding_bytes = pad_length + 1 if pad_length is not None else 0
            
            # Check if we have enough flow control window
            if lfcw - padding_bytes <= 0:
                logging.info(
                    "Stream %d. lfcw: %d. padding bytes: %d. not enough"
                    " quota yet" % (stream_id, lfcw, padding_bytes)
                )
                break
                
            # Calculate how much we can send in this frame
            chunk_size = min(lfcw - padding_bytes, read_chunk_size)
            bytes_to_send = min(chunk_size, self._send_remaining[stream_id])
            logging.info(
                "flow_control_window = %d. sending [%d:%d] stream_id %d."
                " includes %d total padding bytes"
                % (
                    lfcw,
                    self._send_offset,
                    self._send_offset + bytes_to_send + padding_bytes,
                    stream_id,
                    padding_bytes,
                )
            )

            # Validate frame size
            if bytes_to_send + padding_bytes > _MIN_SETTINGS_MAX_FRAME_SIZE:
                raise ValueError(
                    "overload: sending %d" % (bytes_to_send + padding_bytes)
                )
                
            # Extract data chunk
            data = self._data_to_send[
                self._send_offset : self._send_offset + bytes_to_send
            ]
            
            try:
                self._conn.send_data(
                    stream_id, data, end_stream=False, pad_length=pad_length
                )
            except h2.exceptions.ProtocolError:
                logging.info("Stream %d is closed" % stream_id)
                break
                
            # Update tracking state
            self._send_remaining[stream_id] -= bytes_to_send
            self._send_offset += bytes_to_send
            
            # If all data sent, notify handler
            if self._send_remaining[stream_id] == 0:
                self._handlers["SendDone"](stream_id)

    def default_ping(self):
        """Send a ping frame to the client."""
        logging.info("sending ping")
        self._outstanding_pings += 1
        self._conn.ping(b"\x00" * 8)
        self.transport.write(self._conn.data_to_send())

    def on_send_done_default(self, stream_id):
        """Default handler when all data is sent: sends trailers if stream still open."""
        if self._stream_status[stream_id]:
            self._stream_status[stream_id] = False
            self.default_send_trailer(stream_id)
        else:
            logging.error("Stream %d is already closed" % stream_id)

    def default_send_trailer(self, stream_id):
        """Send gRPC trailers to indicate successful completion."""
        logging.info("Sending trailer for stream id %d" % stream_id)
        self._conn.send_headers(
            stream_id, headers=[("grpc-status", "0")], end_stream=True
        )
        self.transport.write(self._conn.data_to_send())

    @staticmethod
    def default_response_data(response_size):
        """
        Generate a gRPC response message with dummy data.
        Args:
            response_size: Desired size of the response payload
        Returns:
            bytes: gRPC framed response message
        """
        sresp = messages_pb2.SimpleResponse()
        sresp.payload.body = b"\x00" * response_size  # Create dummy payload
        serialized_resp_proto = sresp.SerializeToString()
        # Frame the response with gRPC header (1 byte flag + 4 bytes length)
        response_data = (
            b"\x00"
            + struct.pack("i", len(serialized_resp_proto))[::-1]
            + serialized_resp_proto
        )
        return response_data

    def parse_received_data(self, stream_id):
        """
        Parse received gRPC message from buffer.
        Args:
            stream_id: Stream ID to parse data from
        Returns:
            SimpleRequest: Parsed request message or None if incomplete
        """
        recv_buffer = self._recv_buffer[stream_id]
        # Extract message length from gRPC header (bytes 1-4, little-endian)
        grpc_msg_size = struct.unpack("i", recv_buffer[1:5][::-1])[0]
        
        # Validate we have complete message
        if len(recv_buffer) != _GRPC_HEADER_SIZE + grpc_msg_size:
            return None
            
        # Parse protobuf message
        req_proto_str = recv_buffer[5 : 5 + grpc_msg_size]
        sr = messages_pb2.SimpleRequest()
        sr.ParseFromString(req_proto_str)
        logging.info("Parsed simple request for stream %d" % stream_id)
        return sr
```